[Issue #27] Refactor _button-inverse.scss to be passed css #{} class. Put if statemet to check for  class, either wrapping in class or creating variant for bg-variant.

--- a/app/styles/main/_buttons-inverse.scss
+++ b/app/styles/main/_buttons-inverse.scss
@@ -4,106 +4,34 @@
 
 // Default Buttons Inverse
 // --------------------------------------------------
-.btn-default-inverse {
-  @include button-inverse-variant($btn-default-bg);
-}
-.btn-primary-inverse {
-  @include button-inverse-variant($brand-secondary);
-}
-.btn-info-inverse    {
-  @include button-inverse-variant($brand-info);
-}
-.btn-danger-inverse  {
-  @include button-inverse-variant($brand-danger);
-}
-.btn-success-inverse {
-  @include button-inverse-variant($brand-success);
-}
-.btn-warning-inverse {
-  @include button-inverse-variant($brand-warning);
-}
-.btn-inverse-inverse {
-  @include button-inverse-variant($brand-primary);
-}
+/* @include button-inverse-variant('.btn-default-inverse', $btn-default-bg);
+@include button-inverse-variant('.btn-primary-inverse', $brand-primary);
+@include button-inverse-variant('.btn-info-inverse', $brand-info);
+@include button-inverse-variant('.btn-danger-inverse', $brand-danger);
+@include button-inverse-variant('.btn-success-inverse', $brand-success);
+@include button-inverse-variant('.btn-warning-inverse', $brand-warning);
+@include button-inverse-variant('.btn-inverse-inverse', $inverse); */
+
 
 // Alternate Buttons Inverse
 // --------------------------------------------------
-.btn-turquoise-inverse {
-    @include button-inverse-variant($turquoise);
-}
-
-.btn-green-sea-inverse {
-    @include button-inverse-variant($green-sea);
-}
-
-.btn-emerald-inverse {
-    @include button-inverse-variant($emerald);
-}
-
-.btn-nephritis-inverse {
-    @include button-inverse-variant($nephritis);
-}
-
-.btn-peter-river-inverse {
-    @include button-inverse-variant($peter-river);
-}
-
-.btn-belize-hole-inverse {
-    @include button-inverse-variant($belize-hole);
-}
-
-.btn-amethyst-inverse {
-    @include button-inverse-variant($amethyst);
-}
-
-.btn-wisteria-inverse {
-    @include button-inverse-variant($wisteria);
-}
-
-.btn-wet-asphalt-inverse {
-    @include button-inverse-variant($wet-asphalt);
-}
-
-.btn-midnight-blue-inverse {
-    @include button-inverse-variant($midnight-blue);
-}
-
-.btn-sun-flower-inverse {
-    @include button-inverse-variant($sun-flower);
-}
-
-.btn-orange-inverse {
-    @include button-inverse-variant($orange);
-}
-
-.btn-carrot-inverse {
-    @include button-inverse-variant($carrot);
-}
-
-.btn-pumpkin-inverse {
-    @include button-inverse-variant($pumpkin);
-}
-
-.btn-alizarin-inverse {
-    @include button-inverse-variant($alizarin);
-}
-
-.btn-pomegranate-inverse {
-    @include button-inverse-variant($pomegranate);
-}
-
-.btn-clouds-inverse {
-    @include button-inverse-variant($clouds);
-}
-
-.btn-silver-inverse {
-    @include button-inverse-variant($silver);
-}
-
-.btn-concrete-inverse {
-    @include button-inverse-variant($concrete);
-}
-
-.btn-asbestos-inverse {
-    @include button-inverse-variant($asbestos);
-}
+/* @include button-inverse-variant('.btn-turquoise-inverse', $turquoise);
+@include button-inverse-variant('.btn-green-sea-inverse', $green-sea);
+@include button-inverse-variant('.btn-emerald-inverse', $emerald);
+@include button-inverse-variant('.btn-nephritis-inverse', $nephritis); */
+@include button-inverse-variant($peter-river, transparent, '.btn-peter-river-inverse');
+/* @include button-inverse-variant('.btn-belize-hole-inverse', $belize-hole);
+@include button-inverse-variant('.btn-amethyst-inverse', $amethyst); */
+@include button-inverse-variant($wisteria, transparent, '.btn-wisteria-inverse');
+/* @include button-inverse-variant('.btn-wet-asphalt-inverse', $wet-asphalt);
+@include button-inverse-variant('.btn-midnight-blue-inverse', $midnight-blue);
+@include button-inverse-variant('.btn-sun-flower-inverse', $sun-flower);
+@include button-inverse-variant('.btn-orange-inverse', $orange);
+@include button-inverse-variant('.btn-carrot-inverse', $carrot);
+@include button-inverse-variant('.btn-pumpkin-inverse', $pumpkin);
+@include button-inverse-variant('.btn-alizarin-inverse', $alizarin);
+@include button-inverse-variant('.btn-pomegranate-inverse', $pomegranate);
+@include button-inverse-variant('.btn-clouds-inverse', $clouds);
+@include button-inverse-variant('.btn-silver-inverse', $silver);
+@include button-inverse-variant('.btn-concrete-inverse', $concrete);
+@include button-inverse-variant('.btn-asbestos-inverse', $asbestos); */
