--- a/app/styles/main/mixins/_buttons-inverse.scss
+++ b/app/styles/main/mixins/_buttons-inverse.scss
@@ -3,42 +3,90 @@
 // Easily pump out default styles, as well as :hover, :focus, :active,
 // and disabled options for all buttons
 
-@mixin button-inverse-variant($color) {
-  color: $color;
-  background-color: #fff;
-  border-color: $color;
-
-  &:hover,
-  &:focus,
-  &.focus,
-  &:active,
-  &.active,
-  .open > &.dropdown-toggle {
-        color: #fff;
-        background-color: $color;
-        border-color: #fff;
-  }
-  &:active,
-  &.active,
-  .open > &.dropdown-toggle {
-    background-image: none;
-  }
-  &.disabled,
-  &[disabled],
-  fieldset[disabled] & {
-    &,
-    &:hover,
-    &:focus,
-    &.focus,
-    &:active,
-    &.active {
-      background-color: $color;
-          border-color: #fff;
+@mixin button-inverse-variant($color, $bg-color: transparent, $parent: null) {
+    @if $parent != null {
+        #{$parent} { 
+            color: $color;
+            background-color: $bg-color;
+            border-color: $color;
+    
+            &:hover,
+            &:focus,
+            &.focus,
+            &:active,
+            &.active,
+            .open > &.dropdown-toggle {
+                color: #fff;
+                background-color: $color;
+                border-color: $bg-color;
+            }
+            
+            &:active,
+            &.active,
+            .open > &.dropdown-toggle {
+                background-image: none;
+            }
+            
+            &.disabled,
+            &[disabled],
+            fieldset[disabled] & {
+                &,
+                &:hover,
+                &:focus,
+                &.focus,
+                &:active,
+                &.active {
+                    background-color: $color;
+                    border-color: $bg-color;
+                }
+            }
+    
+            .badge {
+                color: #fff;
+                background-color: $color;
+            }
+        }
     }
-  }
-
-  .badge {
-    color: #fff;
-    background-color: $color;
-  }
+    @else {
+        color: $color;
+            background-color: $bg-color;
+            border-color: $color;
+    
+            &:hover,
+            &:focus,
+            &.focus,
+            &:active,
+            &.active,
+            .open > &.dropdown-toggle {
+                color: #fff;
+                background-color: $color;
+                border-color: $bg-color;
+            }
+            
+            &:active,
+            &.active,
+            .open > &.dropdown-toggle {
+                background-image: none;
+            }
+            
+            &.disabled,
+            &[disabled],
+            fieldset[disabled] & {
+                &,
+                &:hover,
+                &:focus,
+                &.focus,
+                &:active,
+                &.active {
+                    background-color: $color;
+                    border-color: $bg-color;
+                }
+            }
+    
+            .badge {
+                color: #fff;
+                background-color: $color;
+            }
+    }
 }
+    
